--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
-  "name": "tic-tac-toe",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "react": "^16.2.0",
-    "react-dom": "^16.2.0",
-    "react-scripts": "1.1.1"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "tic-tac-toe",
+    "version": "0.1.0",
+    "private": true,
+    "dependencies":
+    {
+        "react": "^16.2.0",
+        "react-dom": "^16.2.0",
+        "react-scripts": "1.1.1"
+    },
+    "scripts":
+    {
+        "start": "sass --watch src/styles/scss:src/styles/css | react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
