--- a/package.json
+++ b/package.json
@@ -2,17 +2,21 @@
     "name": "tic-tac-toe",
     "version": "0.1.0",
     "private": true,
-    "dependencies":
-    {
+    "homepage": "http://sonapraneeth-a.github.io/tic-tac-toe",
+    "dependencies": {
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
         "react-scripts": "1.1.1"
     },
-    "scripts":
-    {
+    "scripts": {
         "start": "sass --watch src/styles/scss:src/styles/css | react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
-        "eject": "react-scripts eject"
+        "eject": "react-scripts eject",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
+    },
+    "devDependencies": {
+        "gh-pages": "^1.1.0"
     }
 }
